# xfce4-gpugraph-plugin

./: .gitignore  README.md  gpugraph.c  gpugraph.desktop.in  meson.build  plugin.c  plugin.h
